# operation.repo

./: .gitignore  AuditClass.py  AuditClassToServer.py  CHANGELOG.md  ConfigHandler.py  Makefile  OpClass.py  OpClassToServer.py  README.md  TODO.md  Utils.py  audit.conf  audit.conf.example  audit.py  op.conf  op.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  security-bandit.yml  security-semgrep.yml  security-snyk.yml
.op/: op.conf  op.conf.example
auditserver/: AuditServerClass.py  auditserver.py  remove.sh
deployable/: linpeas.sh
deployable/aws/: 3.py  awsenum.sh
opsserver/: OpsServerClass.py  opsserver.py  remove.sh
src/operation_repo/: __init__.py  cli.py  commits.py  config.py  core.py  notes.py  server.py  templates.py
ssh/: user_auditserver
